change of ui in screen 2

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="text/javascript" href="https://storage.googleapis.com/comman-storage/web/assets/chatV1.js">
 </head>
 <body>
   <app-root></app-root>
